assert-struct/tests/snapshots/tuples__tuple_two_errors.snap
---
source: assert-struct/tests/tuples.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/tuples_errors/two_errors.rs:20:20
   |
20 |             pair: (100, "expected"),  // Both fields wrong
   |                    ^^^  ^^^^^^^^^^ got "actual"
   |                    |
   |                    got 50
